Fixing layout problems

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body > .container {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
